complete tutorial file replacement

--- a/options.html
+++ b/options.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="button.css">
   </head>
   <body>
     <div id="buttonDiv">
@@ -8,7 +9,6 @@
     <div>
       <p>Choose a different background color!</p>
     </div>
-    <input type="text" id='input'>
   </body>
   <script src="options.js"></script>
 </html>
