--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      body {
-        width: 200px;
-        height: 100px;
-      }
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-      }
-    </style>
+    <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <h1>Instructions</h1>
+    <button id="changeColor"></button>
     <script src="popup.js"></script>
   </body>
 </html>
